# FreeTimeProjects

./: .gitignore  README.md
Audio/: mp3_to_wav.py
CUDA101Try/: CUDA101Try.sln
CUDA101Try/CUDA101Try/: CUDA101Try.vcxproj  links.txt  (+3 more)
CUDA102Try/: CUDA102Try.sln
CUDARayTracing/: CUDARayTracing.sln
CUDA_begin/: CUDA_begin.sln
ConwaysGameOfLife/: controller.py  main.py  model.py  utils.py  view.py
FFT/: data_provider.py  fft.py  main.py  mp3_test.py  plot.py  utils.py  with_numpy.py
GameEngineProjectCMake/: CMakeLists.txt
GameEngineProjectCMake/GameEngineProject/: CMakeLists.txt  main.cc  main.ih
GameEngineProjectCMake/GameEngineProject/important/: source.cc  source.h
GraphicsEngine/: GraphicsEngine.sln  computeShaders.txt  gameEngine.txt.txt
GravitySim2D/: readme.txt
PyGameMVCgeneral/: controller.py  explanation.txt  utils.py  view.py
PythonMusicVideo/: Logistics - Broken Light (feat. Thomas Oliver).m4a  PythonMusicVideo.py  python_music_video.py
PythonRaytracing/: controller.py  main.py  model.py  utils.py  view.py
PythonScreenRecorder/: main.py
RayTracingCUDA/: RayTracingCUDA.sln
ScreenRecorder/: keyboardtry.py  main.py
SecretMessaging/: a.out  decrypting.cpp  encrypter  encrypting.cpp  message.txt
Video/: convertToMp4.py
gitSetupSSH/: README  gitSetup.txt
handyThings/: .bash_aliases
mandelbrotGPU/: controller.py  main.py  mandelbrotGPUsingle.py  model.py  utils.py  view.py
tensorflow_AMD/: main.py
tensorflow_CNN/: CNN_basic.py  CNN_tf_tutorial.py
tensorflow_NST/: make_GIF.py  tensorflow_NST.py
timelapse/: timelapse.py
(+349 files in other folders)
