# CMakeList.txt : Top-level CMake project file, do global configuration
# and include sub-projects here.
#
cmake_minimum_required (VERSION 3.8)

project ("GameEngineProject")

# Include sub-projects.
add_subdirectory ("GameEngineProject")



# Add source to this project's executable.
#add_executable (main "main.cc" "main.ih")
